objects/dfsle__EnvelopeConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>dfsle__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prepare</fullName>
                    <default>true</default>
                    <label>Prepare</label>
                </value>
                <value>
                    <fullName>Tag</fullName>
                </value>
                <value>
                    <fullName>Send</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dfsle__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__AddSourceDocuments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Salesforce source documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__AddSourceRecipients__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Add Salesforce source recipients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__EmailMessage__c</fullName>
        <label>Email message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__EmailSubject__c</fullName>
        <label>Email subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__ExpireAfterDays__c</fullName>
        <label>Expire/void envelope in N day(s)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__ExpireWarnDays__c</fullName>
        <label>Warn of expiration in N day(s) prior</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__Expires__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expire/void envelope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__ObjectType__c</fullName>
        <label>Object type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__RemindAfterDays__c</fullName>
        <label>Send reminder in N day(s)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__RemindFrequencyDays__c</fullName>
        <label>Remind every N day(s) until complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__Remind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remind signers via email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__ShowChatterSettings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Chatter settings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__ShowEmailMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show email message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__ShowEmailSubject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show email subject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__ShowRemindExpire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show remind and expire settings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__ShowSendButton__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show send button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__ShowTagButton__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show tag button</label>
        <type>Checkbox</type>
    </fields>
    <label>DocuSign Envelope Configuration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Envelope Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>